# WEB-HW-06

./: README.md  connection.py  create_table.py  fill_db.py  hw_6.sqlite  pyproject.toml  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  seeds.py
