[tool.poetry]
name = "web6hw"
version = "0.1.0"
description = ""
authors = ["Dmyto Marchenko <d.i.marchenko@student.khai.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.5"
faker = "^18.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
